Создал новые классы и доработал две новые функциональности